--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <body>
  <h1>와! 내 사이트다!</h1>
  <h2>오! 내 프로젝트인가?</h2>
- <a href="https://google.com" target="_blank">실험 1</a>
+ <a href="https://google.com" target="_top">실험 1</a>
 </body>
