--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
  <h1>와! 내 사이트다!</h1>
  <h2>오! 내 프로젝트인가?</h2>
  <a href="https://li9uidlime.github.io/CE-Python/">충청북도교육정보연구원 인공지능반</a>
+ <a href="https://www.cberi.go.kr/home/sub.do?menukey=287"><img src="https://www.cberi.go.kr/upload/icd/00000008/2019/1551342452450_XmZoSiAeQ36q7k21XspV.jpg"></img></a>
 </body>
